--- a/src/app.html
+++ b/src/app.html
@@ -5,14 +5,11 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 	 
-		 <!-- Bootstrap CSS 
-		 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-			-->
+
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" data-theme="vintage">
+	<body data-sveltekit-preload-data="hover" data-theme="go_theme">
 		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
-		<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
--->
+
 	</body>
 </html>
